# libwebp-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  groups  project.config
cv-rs/: Cargo.toml  build.rs
cv-rs/native/: CMakeLists.txt  common.h  features2d.h  hash.cc  hash.h  highgui.h  imcodecs.cc  imcodecs.h  imgproc.cc  imgproc.h  mat.h  utils.cc  utils.h
cv-rs/src/: core.rs  cuda.rs  hash.rs  highgui.rs  imgcodecs.rs  imgproc.rs  lib.rs  mat.rs
cv-rs/tests/: utils.rs
cwebp/: Cargo.toml
examples/: cwebp-jpg.rs  cwebp.rs  cwebpx.rs
fuzz/pic-fuzz/: Cargo.toml
fuzz/pic-fuzz/src/: main.rs
hack/: init.sh
libjpeg-turbo-sys/: Cargo.toml  build.rs  wrapper.h
libjpeg-turbo-sys/src/: jpeg_bindings.rs  lib.rs
libpng-sys/: Cargo.toml  build.rs
libpng-sys/src/: lib.rs  png_bindings.rs
libwebp-sys/: Cargo.toml  build.rs  wrapper.h
libwebp-sys/examples/: cwebp.rs
libwebp-sys/pngwebp/: gifdec.c  gifdec.h  jpegdec.c  metadata_read.c  metadata_read.h  metadata_write.c  metadata_write.h  util.c  util.h
libwebp-sys/src/: lib.rs  webp_bindings.rs
src/: gif.rs  jpg.rs  lib.rs  param.rs  png.rs  webp.rs
tests/wali/: macros.rs  mod.rs
tests/wali/cases/: mod.rs  test_gif.rs  test_jpg.rs  test_png.rs  test_webp.rs
