cargo-features = ["profile-overrides"]

[package]
name = "imagers"
version = "0.1.0"
authors = ["vagrant"]
edition = "2018"

[dependencies]
bindgen = "0.48.1"
libwebp-sys = { path = "libwebp-sys" }
libjpeg-turbo-sys = { path = "libjpeg-turbo-sys" }
libpng-sys = { path = "libpng-sys" }
libc = "0.2.50"
lodepng = "2.4.2"
rgb = "0.8"

[dev-dependencies]
crc = "1.8.1"

[workspace]
members = [
  "libjpeg-turbo-sys",
  "libpng-sys",
  "libwebp-sys",
  "cwebp",
  "./"
]
default-members = [
  "libjpeg-turbo-sys",
  "libpng-sys",
  "libwebp-sys",
  "cwebp",
  "./"
]

[[test]]
name = "wali"
path = "tests/wali/mod.rs"

