[package]
name = "imagers"
version = "0.1.0"
authors = ["vagrant"]
edition = "2018"

[dependencies]
actix-web = "0.7.19"
bindgen = "0.49.0"
libwebp-sys = { path = "libwebp-sys" }
libjpeg-turbo-sys = { path = "libjpeg-turbo-sys" }
libpng-sys = { path = "libpng-sys" }
libc = "0.2.51"

[dev-dependencies]
crc = "1.8.1"

[workspace]
members = [
  "libjpeg-turbo-sys",
  "libpng-sys",
  "libwebp-sys",
  "cwebp",
  "./"
]
default-members = [
  "libjpeg-turbo-sys",
  "libpng-sys",
  "libwebp-sys",
  "cwebp",
  "./"
]

[[test]]
name = "wali"
path = "tests/wali/mod.rs"

