[package]
name = "imagers"
version = "0.1.0"
authors = ["vagrant"]
edition = "2018"

[dependencies]
actix-web = "1.0"
bindgen = "0.49"
libwebp-sys = { path = "libwebp-sys" }
libc = "0.2"

[dev-dependencies]
crc = "1.8.1"

[workspace]
members = [
  "libwebp-sys",
  "cwebp",
  "./"
]
default-members = [
  "libwebp-sys",
  "cwebp",
  "./"
]

[[test]]
name = "wali"
path = "tests/wali/mod.rs"

